Fixed slight missalignment with contact section text

--- a/styles.css
+++ b/styles.css
@@ -761,8 +761,16 @@ p.contactTitle {
 	text-align: center;
 	color: white;
 	opacity: 0.8;
-	margin-top: 90px;
-	margin-bottom: 10px;
+	margin-top: 80px;
+	margin-bottom: 0px;
+}
+p.contactDesc {
+	font-size: 20px;
+	text-align: center;
+	color: white;
+	opacity: 0.4;
+	margin-top: 10px;
+	margin-bottom: 15px;
 }
 div.details {
 	position: absolute;
@@ -796,20 +804,12 @@ div.detail:hover {
 	opacity: 0.8;
 	transition: 0.25s;
 }
-p.info {
-	font-family: 'Blinker', sans-serif;
-	color: white;
-	font-size: 20px;
-	margin: 0px;
-	margin-top: 10px;
-	text-decoration: none;
-}
 p.infoU {
 	font-family: 'Blinker', sans-serif;
 	color: white;
 	font-size: 20px;
 	margin: 0px;
-	margin-top: 10px;
+	margin-top: 8px;
 	text-decoration: underline;
 	text-decoration-color: #ffa500;
 }
